standalone_generation.log
Loading O2Physics/latest-master-o2
  Loading requirement: BASE/1.0 GLFW/3.3.2-local1 Python-modules/1.0-local1
    curl/7.70.0-local1 boost/v1.83.0-alice2-local1 Ppconsul/v0.2.3-local1
    Configuration/v2.8.0-local1 protobuf/v29.3-local1 utf8proc/v2.6.1-local1
    xsimd/8.1.0-local1 arrow/v20.0.0-alice1-local1 lhapdf/v6.5.2-local1
    nlohmann_json/v3.11.3-local1 HepMC/HEPMC_02_06_10-local1
    pythia/v8315-alice1-local1 FFTW3/v3.3.9-local1 AliEn-Runtime/v2-19-le-local1
    Vc/1.4.5-local1 XRootD/v5.8.4-local1 TBB/v2021.5.0-local1
    ROOT/v6-36-04-alice2-local1 VMC/v2-0-local1 MCStepLogger/v0.6.1-local1
    DebugGUI/v0.8.0-local1 pythia6/428-alice2-local1
    xercesc/Xerces-C_3_2_5-local1 GEANT4/v11.2.0-alice1-local1 vgm/v5-3-local1
    GEANT4_VMC/v6-6-update1-p3-local1 GEANT3/v4-4-local1 simulation/v1.0-local1
    generators/v1.0-local1 fmt/11.1.2-local1 FairLogger/v2.1.0-local1
    FairRoot/v18.4.9-alice3-local1 HepMC3/3.3.0-local1
    libInfoLogger/v2.8.3-local1 Monitoring/v3.19.8-local1
    Common-O2/v1.6.3-local1 ms_gsl/4.0.0-local1 xjalienfs/1.6.8-local1
    libwebsockets/v4.3.2-local1 JAliEn-ROOT/0.7.15-local1 cgal/4.12.2-local1
    GMP/v6.2.1-local1 fastjet/v3.4.1_1.052-alice3-local1
    libjalienO2/0.1.5-local1 ZeroMQ/v4.3.5-local1 FairMQ/v1.10.0-local1
    re2/2024-07-02-local1 abseil/20240722.0-local1 onnx/v1.17.0-alice2-local1
    flatbuffers/v24.3.25-local1 ONNXRuntime/v1.22.0-local1
    RapidJSON/v1.1.0-alice2-local1 MLModels/20220530-local1 c-ares/1.18.1-local1
    grpc/v1.71.0-local1 bookkeeping-api/v1.9.2-local1 O2/dev-local1
    KFParticle/v1.1-7-local1 AliEn-CAs/v1-local1
========================================
Standalone Pythia Event Generation
========================================
PYTHIA8: /Users/djkim/alice/sw/osx_arm64/pythia/v8315-alice1-local1
FASTJET: /Users/djkim/alice/sw/osx_arm64/fastjet/v3.4.1_1.052-alice3-local1
Events: 1000000
Output: results/pythia_events.root
Jet R: 0.4

   ------------------------------------------------------------------
  | Welcome to ROOT 6.36.04                        https://root.cern |
  | (c) 1995-2025, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for macosxarm64 on Nov 02 2025, 11:57:06                   |
  | From tags/v6-36-04-alice2@v6-36-04-alice2                        |
  | With Apple clang version 17.0.0 (clang-1700.3.19.1)              |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------

Loading libraries explicitly...
 ROOT libraries loaded
 Pythia 8 loaded
 FastJet loaded

Loading standalone macro (interpreted mode)...
Error in <TRint::ProcessLine>: macro z01_GeneratePythiaEvents_standalone.C not found in path .:/Users/djkim/alice/sw/osx_arm64/ROOT/v6-36-04-alice2-local1/macros

Generating events...
  Events: 1000000
  Output: results/pythia_events.root
  Jet R: 0.4

input_line_36:2:3: error: use of undeclared identifier 'GeneratePythiaEvents'
 (GeneratePythiaEvents(1000000, "results/pythia_events.root", 0.40000000000000002))
  ^

Done!
